* Fixed bug that could cause group file filtration to assign incorrect gid,
  potentially security issue if sshd_config was modified away from shifter
  defaults
* Fixed bug that caused PATH to be searched incorrectly
* Fixed issue with user volume mounts able to traverse relative paths
  inappropriately
* Fixed bug that confused SHIFTER_VOLUME environment variable with shifter
  command line arguments
* Performance and functionality improvements in docker image conversion
* Add support for unicode filenames in images
* Support for Docker and/or unionfs whiteouts to allows files to be deleted
  in ancestral layers
* Erase possibility of download collisions in image worker
* Refactored SLURM plugin to better organize and abstract SLURM api
* Fully support SLURM extern step for shifter sshd
* Add imagegw heartbeating capability to increase robustness of image pulls
* Add image expiration capability to allow images age out or be
  administratively removed

16.04.0
===========
+  Modified repo layout to push udiRoot to top-level
+  Added RPM spec file for RHEL- and SLES-based systems
+  Added writable perNodeCache capability
+  Enabled BB support

15.12.1
===========
+  Fixed bug preventing autoshift/ccm in slurm/udiRoot integration from 
   chdir'ing to permission restricted paths on root-squashed filesystems
+  Fixed bug on some systems where the udiRoot would get recursively mounted in
   the odd situation that the udiMount point overlapped the VFS being mounted
+  Corrected udiRoot testsuite to run in automated test framework

15.12.0
===========
+  Integrate external deps (util-linux/mount, openssh, libressl) into automake
   build
+  Create /var/empty earlier in case an image already provides it (need it no
   matter what)
+  Renamed ImageGwConnect to shifterimg
+  Updated ImageGwConnect helper application to work with changes to imagegw
   output and allow user to specify image type. Add image listing support.
+  Created iniital README
